# Alignment-AI-Client-Follow-up-tool

./: .env.example  .eslintrc.json  .firebaserc  .gitignore  Agent-Cleanup.txt  CLIENT_INDEPENDENCE_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_FIREBASE.md  DEPLOYMENT_SUMMARY.md  FIREBASE_DEPLOYMENT.md  FIREBASE_HANDOFF_SUMMARY.md  FIREBASE_SETUP.md  FIREBASE_STUDIO_IMPORT.md  GITHUB_COPILOT_README.md  HANDOFF_CHECKLIST.md  LICENSE  PROJECT_STATUS.md  QUICKSTART_FIREBASE.md  README.md  SECURITY.md  build-for-firebase.ps1  build-for-firebase.sh  deploy-firebase.bat  firebase-studio-context.json  firebase-studio-handoff.md  firebase.json  firestore.indexes.json  firestore.rules  install-firebase.sh  package-lock.json  package.json  tsconfig.json  vercel.json  verify-deployment.sh
.github/: PULL_REQUEST_TEMPLATE.md
case-study/: case-study-styles.css  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: API_REFERENCE.md  CASE_STUDY_BUILDER.md  FIREBASE_ARCHITECTURE.md  FIREBASE_ARCHITECTURE_SUMMARY.md  HANDOFF.md  PRD.md  QUICK_START.md  README.txt  TROUBLESHOOTING.md  USER_GUIDE.md  ZERO_CONFIG_ARCHITECTURE.md  ZERO_CONFIG_IMPLEMENTATION.md  ZERO_CONFIG_SUMMARY.md  sample-clients.csv
firebase/: deploy.sh  firebase.json  firestore.indexes.json  firestore.rules
functions/: package.json
installer/: README.md  build.bat  installer.nsi  web-installer.html
presentation/: .vercelignore  CASE_STUDY_HANDOFF.md  DEPLOY.md  README.md  (+3 more)
src/desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/desktop/src-tauri/src/: main.rs
(+116 files in other folders)
