[package]
name = "lgbtq-center-automation"
version = "1.0.0"
description = "Cleveland LGBTQ Center Client Follow-Up Automation"
authors = ["Alignment AI (Upton Rand) <contact@alignment-ai.io>"]
license = "MIT"
repository = "https://github.com/Uptonr3421/Alignment-AI-Client-Follow-up-tool"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
lettre = "0.11"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
